# OOP

./: CMakeLists.txt
.devcontainer/: devcontainer.json
lab_1/: CMakeLists.txt  main.cpp
lab_1/src/: gcd.cpp  gcd.h
lab_1/tests/: test.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/src/: hex.cpp  hex.h
lab_2/tests/: tests.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/src/: Figure.cpp  Figure.h  FigureArray.cpp  FigureArray.h  Octagon.cpp  Octagon.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
lab_3/tests/: tests.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_4/src/: Figure.cpp  Figure.h  FigureArray.h  Octagon.h  Point.h  Square.h  Triangle.h
lab_4/tests/: tests.cpp
lab_5/: CMakeLists.txt  main.cpp
lab_5/src/: CustomIterator.h  CustomMemoryResource.cpp  CustomMemoryResource.h  CustomVector.h
lab_5/tests/: tests.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/src/: Field.cpp  Field.h
lab_6/src/backup/: BackupHandler.cpp  BackupHandler.h
lab_6/src/logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h
lab_6/src/npc/: BaseNpc.cpp  BaseNpc.h  Bear.cpp  Bear.h  Elf.cpp  Elf.h  Squirrel.cpp  Squirrel.h  Thief.cpp
lab_6/src/utils/: IElement.cpp  IElement.h  ISerializable.cpp  ISerializable.h  IVisitor.cpp  IVisitor.h  JsonObject.cpp  JsonObject.h  Point.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Vec2D.cpp  Vec2D.h
lab_6/tests/: tests.cpp
lab_7/: CMakeLists.txt
lab_7/src/: Field.cpp  Field.h
lab_7/src/backup/: BackupHandler.cpp
lab_7/src/logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.h  ILogger.cpp  ILogger.h
lab_7/src/npc/: BaseNpc.cpp  BaseNpc.h  Elf.cpp  Elf.h  Squirrel.cpp  Squirrel.h  Thief.cpp  Thief.h
lab_7/src/utils/: CoroutineHandler.cpp  CoroutineHandler.h  ISerializable.h  Point.cpp  Point.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  ScopedThread.cpp  ScopedThread.h  Task.cpp  Task.h  Vec2D.h
lab_7/tests/: tests.cpp
